<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mi Mascota</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Usuario">Usuario</string>
    <string name="Password">Password</string>
    <string name="Conectar">Conectar</string>
    <string name="title_activity_main">Mi Mascota</string>
    <string name="title_activity_subir_foto">Subir Foto</string>
    <string name="FotoSubidaCorrectamente">Foto Subida Correctamente</string>
    <string name="SacarFoto">Sacar Foto</string>
    <string name="Subir">Subir</string>
    <string name="FotoASubir">Foto a subir</string>
    <string name="LlenarFormulario">Llenar Formulario</string>
    <string name="title_activity_formulario">Formulario</string>
    <string name="Ok">Ok</string>
    <string name="Nombre">Nombre</string>
    <string name="Direccion">Direccion</string>
    <string name="Color">Color</string>
    <string name="Raza">Raza</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Contrasenia">Contraseña</string>
    <string name="Email">Email</string>
    <string name="title_activity_blank_fragment">BlankFragment</string>
    <string name="title_activity_mapa">Ubicación del perro</string>
    <string name="title_activity_mapa_fragment">MapaFragment</string>
    <string name="Ubicacion">Ubicacion</string>
    <string name="action_confirmar">Confirmar ubicacion</string>

</resources>